# IDH-mut-astro-PMN-2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: .gitignore  PMN_gene_list.csv  TCGA_ASCAT.tsv  all_LGG_patients_df.RDS
data/Venteicher_scRNAseq_data/: aai8478-table-s1.xlsx  metadata.csv
data/all_primary_complete/: .gitignore  CN_segments.RDS  meta_data.RDS
output/: MCR_df.csv  MCR_genes.txt  MCR_genes_df.csv  MC_results.RDS  PMN_project.CNV48.matrix.tsv  TCGA_selected_CTLP_results.RDS  chr_arm_scna.csv
output/PMN_neg_analysis/: PMN_neg_inc_MYC_genes.csv  conversion_table.html  d6_genes.txt  enr_result.RDS  enriched_terms.html  results.html
output/SigProfilerAssignment/: JOB_METADATA_SPA.txt
output/Venteicher_scRNAseq/: MCR_overlapping_copykat_intervals.RDS  basic_cluster_type_vec.RDS  cluster_annot_cancer_types.RDS  cluster_annot_normal_types.RDS
renv/: settings.json
scripts/: utils.R
scripts/1.data_prep/: 1.obtain_data.R  2.prep_gene_level_SCNA.R  3.astro_selection.R  4.prep_metrics.R  5.prep_CT.R
scripts/2.PMN_alterations/: 1.PMN_alterations.R  2.MYC_assoc_methylation.R  2.PMN_assoc.R  3.PMN_assoc.R  3.expr_assoc.R  4.expr_assoc.R
scripts/3.PMN_negative_analysis/: 1.PMN_neg_analysis.R  3.PMN_neg_subclass_associations.R  3.define_minimal_common_region (Umut Gerlevik's conflicted copy 2024-02-12).R  3.define_minimal_common_region.R  4.del19q_MYC_comparison.R  4.del19q_effect.R
scripts/4.MCR_analysis/: 2.MCR_in_all_samples.R  3.subclass_associations.R
scripts/4.microdeletion_analysis/: 1.microdel19q_tumors_oncoplot.R  (+9 more)
(+76 files in other folders)
